--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@ body {
                     <circle cx="50" cy="50" r="45"></circle>
                     <circle class="cbar" cx="50" cy="50" r="45" style="--percent: 0.8"></circle>
                   </svg>
-                  <span class="tl-name">Sublime</span>
+                  <span class="tl-name">Visual Studio Code</span>
                   <span class="tl-exp">90%</span>
                 </li>
                 <li>
@@ -575,8 +575,8 @@ body {
                     <circle cx="50" cy="50" r="45"></circle>
                     <circle class="cbar" cx="50" cy="50" r="45" style="--percent: 0.74"></circle>
                   </svg>
-                  <span class="tl-name">NPM</span>
-                  <span class="tl-exp">74%</span>
+                  <span class="tl-name">Google</span>
+                  <span class="tl-exp">100000000%</span>
                 </li>
               </ul>
             </div>
