--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ body {
               <div class="title-icon">
                 <i class="fas fa-user-graduate"></i>
               </div>
-              <span>Eduation</span>
+              <span>Education</span>
             </div>
             <div class="detail-content">
                 <div class="timeline-block">
