--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@ body {
                     <circle cx="50" cy="50" r="45"></circle>
                     <circle class="cbar" cx="50" cy="50" r="45" style="--percent: 0.8"></circle>
                   </svg>
-                  <span class="tl-name">Visual Studio Code</span>
+                  <span class="tl-name">VS Code</span>
                   <span class="tl-exp">90%</span>
                 </li>
                 <li>
